<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="submit">Submit</string>
    <string name="bad_habit">Bad</string>
    <string name="good_habit">Good</string>
    <string name="habit_name_hint">Name</string>
    <string name="habit_description_hint">Description</string>
    <string name="habit_completion_amount_hint">Amount of completions</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="periodicity_title">Habit Periodicity</string>
    <string name="times_amount_placeholder">Times</string>
    <string name="priority_title">Priority:</string>
    <string name="time_interval">Time Interval</string>
    <string name="habit_priority">Habit Priority</string>
    <string name="type_placeholder">Type:</string>
    <string name="per_placeholder">Per:</string>
    <string name="of_placeholder">Of:</string>
    <string name="amount_placeholder">Amount</string>
    <string name="times_hint">Times</string>
    <string name="priority">Priority:</string>
    <string name="description_hint">Description:</string>
    <string name="periodicity_hint">Periodicity:</string>
    <string name="times_per">times per</string>
    <string name="home">Home</string>
    <string name="about_app">About app</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="linkToGithub">App has been created by <a href="https://github.com/Xoka74">me</a></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="sortByPriority">Сортировать по приоритету:</string>
    <string name="orderbyascending">orderByAscending</string>
    <string name="all">All</string>
    <string name="filterByType">Фильтровать по типу:</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="action_search">Search habit</string>
    <string name="perform">Perform</string>
</resources>