<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="habitModel"
            type="com.example.hometask3.ui.habit_details.HabitViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/habitNameInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:autofillHints="true"
                    android:hint="@string/habit_name_hint"
                    android:inputType="text"
                    android:text="@{habitModel.habit.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/habitDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:autofillHints="true"
                    android:hint="@string/habit_description_hint"
                    android:inputType="textMultiLine"
                    android:text="@{habitModel.habit.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habitNameInput" />


                <RelativeLayout
                    android:id="@+id/priority_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habitDescriptionInput">

                    <TextView
                        android:id="@+id/priority_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="@string/priority_title"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/prioritySpinner"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/priority_text_view"
                        android:contentDescription="@string/habit_priority" />

                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/habit_type_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priority_container">

                    <TextView
                        android:id="@+id/type_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/type_placeholder"
                        android:textSize="20sp"
                        tools:text="Type: " />

                    <RadioGroup
                        android:id="@+id/type_buttons_radiogroup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:checkedButton="@id/good_habit_button"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/good_habit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/good_habit" />

                        <RadioButton
                            android:id="@+id/bad_habit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/bad_habit" />

                    </RadioGroup>
                </LinearLayout>


                <TextView
                    android:id="@+id/periodicity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/periodicity_title"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habit_type_view_container" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/periodicity_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/periodicity_title">

                    <EditText
                        android:id="@+id/habitCompletionAmountInput"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:autofillHints="true"
                        android:hint="@string/times_hint"
                        android:inputType="number"
                        android:text="@{String.valueOf(habitModel.habit.count)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/per_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:text="@string/per_placeholder"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/timesAmountInput"
                        app:layout_constraintStart_toEndOf="@+id/habitCompletionAmountInput"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/timesAmountInput"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@{String.valueOf(habitModel.habit.periodicity.intervalAmount)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/of_placeholder"
                        app:layout_constraintStart_toEndOf="@+id/per_placeholder"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/of_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/of_placeholder"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/interval_spinner"
                        app:layout_constraintStart_toEndOf="@+id/timesAmountInput"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/interval_spinner"
                        android:layout_width="120dp"
                        android:layout_height="54dp"
                        android:contentDescription="@string/time_interval"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/color_picker_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/periodicity_container">


                    <ImageView
                        android:id="@+id/pickedColor"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="100dp"
                        android:background="@{habitModel.habit.color}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <HorizontalScrollView
                        android:id="@+id/color_picker_scroll_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/pickedColor"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:id="@+id/colors_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintTop_toBottomOf="@+id/timesAmountInput" />

                    </HorizontalScrollView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/complete_creation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/submit"
            android:src="@drawable/check_icon"
            app:fabCustomSize="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>
</layout>